--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- 上記の３つのタグはheadの中で最初に現れないといけない -->
-	<title>Bootstrapのテンプレート</title>
+	<title>日程調整 with Bootstrap</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Optional theme -->
@@ -17,14 +17,15 @@
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+<!--  一応、自作スタイルシート  -->
 	<LINK href="./style.css" rel="stylesheet" type="text/css">
 </HEAD>
-
 <BODY>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-	<!--  コンテンツ  -->
+
+<!--  コンテンツここから  -->
 	<h1>イベント作成</h1>
 	<FORM action="./control.php" method="post">
 	<p>イベント名：　<input type="text" name="event_name" />
@@ -32,6 +33,8 @@
 	<p>コメント:　<textarea name="comment"></textarea>
 	<p><INPUT type="submit" value="イベント作成">
 	</FORM>
+<!--  コンテンツここまで  -->
+
 
 </BODY>
 </HTML>
