--- a/chosei.html
+++ b/chosei.html
@@ -1,3 +1,41 @@
+<table style="height: 384px;" border="1" width="607">
+<tbody>
+<tr>
+<td>
+<table style="height: 369px;" border="1" width="595">
+<tbody>
+<tr>
+<td>
+<table style="height: 82px;" border="1" width="579">
+<tbody>
+<tr>
+<td>&nbsp aaaaaaaaaaaaa</td>
+
+<td> <a href="#" class="button">
+        <span class="add"></span>
+        <img src="../button1.png"  /> </a></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td> 
 
 
-chosei pages
+
+
+</td>
+</tr>
+<tr>
+<td>    <a href="#" class="button">
+        <span class="add"></span>
+        <img src="../button2.jpg"  /> </a></td>
+        
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+</tbody>
+</table>
