--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<!-- 旧Av.phpです -->
 	<TITLE>イベント作成</TITLE>
+	<meta name="viewport" content="width=device-width,maximum-scale=1"/>
 	<LINK href="./src/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
