--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!--カレンダーのデザイン設定-->
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/redmond/jquery-ui.css" >
 	<!--datepickerの設定-->
-	<script src="./src/datepicker-ja.js"></script>
+	<script src="./src/datepicker.js"></script>
 
 <h1>イベントを作る</h1>
 <FORM action="./schedule/newEvent/complete.php" method="post">
