値の受け渡し方とアクセスファイルについて変更
ブラウザからはViewにアクセスさせるようにしました。

値は/chosei/model/getValues.phpをインクルードすることで取ってきています。controllerにアクセスさせてると、再読込みしたときに2重登録になったりしていたバグの修正です。

--- a/src/header.html
+++ b/src/header.html
@@ -17,7 +17,7 @@
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 <!--  一応、自作スタイルシート  -->
-	<LINK href="./style.css" rel="stylesheet" type="text/css">
+	<LINK href="./src/style.css" rel="stylesheet" type="text/css">
 </HEAD>
 <BODY>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
