--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!-- Internet Explorer 8 以前のバージョンのための対策 -->
 
+
 <!------------------------------------------------------------>
 
-
+	
 	<!-- 旧Av.phpです -->
 	<TITLE>イベント作成</TITLE>
 	<meta name="viewport" content="width=device-width,maximum-scale=1"/>
@@ -24,14 +25,13 @@
 	<!--jQueryのインストール-->
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<!--カレンダーの曜日を日本語にする-->
 	<!--カレンダーのデザイン設定-->
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/redmond/jquery-ui.css" >
 	<!--datepickerの設定-->
 	<script src="./src/datepicker.js"></script>
 	<script src="./src/datepicker-ja.js"></script>
-
 <h1>イベントを作る</h1>
+<div class="main">
 <FORM action="./schedule/newEvent/complete.php" method="post">
 <div id="datepicker" class="float">
 	<h3>[step1]&nbsp;日にち候補</h3>
@@ -45,6 +45,7 @@
 	<h3>[step3]&nbsp;メモ</h3>
 	<textarea name="e_comment"></textarea><br><br>
 	<INPUT type="submit" value="イベントを作る">
+</div>
 </div>
 </FORM>
 
