--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
-<!doctype HTML>
 <html>
 <head>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<!-- Internet Explorer 8 以前のバージョンのための対策 -->
+<!------------------------------------------------------------>
+<!--browser chosei code-->
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!-- Internet Explorer 8 以前のバージョンのための対策 -->
+
+
+<!------------------------------------------------------------>
+
+	
 	<!-- 旧Av.phpです -->
 	<TITLE>イベント作成</TITLE>
 	<meta name="viewport" content="width=device-width,maximum-scale=1"/>
-	<LINK href="./src/style.css" rel="stylesheet" type="text/css">
+	<LINK href="./src/style.css" rel="stylesheet" type="text/css" />
 </head>
-
-<body>
+<body> 
 
 	<!--jQueryのインストール-->
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -25,9 +30,9 @@
 	<!--datepickerの設定-->
 	<script src="./src/datepicker.js"></script>
 	<script src="./src/datepicker-ja.js"></script>
-
 <h1>イベントを作る</h1>
-<FORM action="./schedule/newEvent/create.php" method="post">
+<div class="main">
+<FORM action="./schedule/newEvent/complete.php" method="post">
 <div id="datepicker" class="float">
 	<h3>[step1]&nbsp;日にち候補</h3>
 	<textarea id="date_val" name="dates" required></textarea>
@@ -40,6 +45,7 @@
 	<h3>[step3]&nbsp;メモ</h3>
 	<textarea name="e_comment"></textarea><br><br>
 	<INPUT type="submit" value="イベントを作る">
+</div>
 </div>
 </FORM>
 
