--- a/src/header.html
+++ b/src/header.html
@@ -15,3 +15,5 @@
 <![endif]-->
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<meta name="viewport" content="width=device-width, maximum-scale=1"/>
