--- a/src/header.html
+++ b/src/header.html
@@ -17,3 +17,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 <meta name="viewport" content="width=device-width, maximum-scale=1"/>
+
+<LINK href="./style.css" rel="stylesheet" type="text/css">
